Gov reform grammar

--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -111,19 +111,19 @@
  mechanic_extra_trade_goods_from_slaves_yes: "Every owned §YSlaves§! producing province gets the following bonus:\nLocal Production Efficiency: §G+25%§!"
 
  kawin_benat_reform: "Kawin Benat"
- kawin_benat_reform_desc: "Slavery is how our state can maintain its living standards, because of that our nation is focused on optimal usage of their work and ease of their transport to our most industrious areas."
+ kawin_benat_reform_desc: "Slavery is how our state can maintain its high living standards, due to this our nation is focused on the optimal usage of their work and ease of their transport to our most industrious areas."
  
  free_republic_reform: "Free Republic"
- free_republic_reform_desc: "Our state was created during slave revolt that gained us independence from the local slavers. Republic first formed in the fires of the revolution wasn't later reformed so it can't maintain control over large swaths of land. But people here are still eager to fight for freedom of others."
+ free_republic_reform_desc: "Our state was created during a slave revolt that gained independence from local slavers. The republic was first formed in the fires of the revolution and has not undergone many stately reforms, making it unable to maintain control over large swathes of land. However, the people are still eager to fight for the freedom of others."
 
  tikset_monarchy_reform: "Tikset Monarchy"
- tikset_monarchy_reform_desc: "Need for safe communication in Lunpilat Empire forced a lot of people to join our navy. Later a mandatory service on our ships was introduced, after the empire this law still remained in place. But now instead of recruiting everyone we weed out the mediocre candidates with the best of best being send to serve on our galleys"
+ tikset_monarchy_reform_desc: "A need for safe communication in the Lunpilat Empire forced a lot of people to join the navy. A mandatory naval service was later introduced, remaining an institution even after the fall of the empire. However, now only the best of the best are selected to serve on the galleys to maintain our supremacy on the waves."
 
  kingdom_of_the_sun_reform: "Kingdom of the Sun"
- kingdom_of_the_sun_reform_desc: "These lands are being protected by Lord of the Sun, this title isn't hereditary and can be usurped by any other lord that controls palace of the first lord. Because of this his power over his dominion isn't absolute and his subjects often descend into chaos."
+ kingdom_of_the_sun_reform_desc: "These lands are being protected by Lord of the Sun, this title isn't hereditary and can be usurped by any lord that controls palace of the first lord. Because of this his power over his dominion is not absolute and his subjects often descend into chaos."
 
  isolationist_monarchy_reform: "Isolationist Monarchy"
- isolationist_monarchy_reform_desc: "Our ruler avoid diplomacy with other states in order to maintain higher level of security and power over his domain. Due to this, we don't have a lot of state personel, making our nation administratively hindered."
+ isolationist_monarchy_reform_desc: "Our rulers avoid diplomacy with other states in order to maintain a higher level of security and power over their domain. Due to this, we suffer from a lack of state officials, causing our nation to be administratively hindered."
 
  manufacturing_monopoly_reform: "Manufacturing Monopolies"
  manufacturing_monopoly_reform_desc: "Our burghers earned the right to be sole providers of advanced goods such as glass, jewelry, tools, textiles and valuable gems."
@@ -133,4 +133,4 @@
  khumaraati_auxiliaries_reform_desc: "Many Khumaraatis are loyal to the khan and will always serve him to their fullest potential. Many times they were a great help, especially in the wars against Ibliguz and raids in Watlistan."
  
  moon_kingdom_reform: "Moon Kingdom"
- moon_kingdom_reform_desc: "Moon Kingdom is a rather unique type of Bkuslcuhtian Matriarchy, which is named due to the fact that its founder was born on full moon, and its tradition is heavily centered around the lunar calendar."
+ moon_kingdom_reform_desc: "The Moon Kingdom is a rather unique type of Bkuslcuhtian Matriarchy, which is named due to the fact that its founder was born under a full moon, and its tradition is heavily centered around the lunar calendar."
