ideas (loc on the weekend)

--- a/localisation/TD_01_flavour_okukaiga_l_english.yml
+++ b/localisation/TD_01_flavour_okukaiga_l_english.yml
@@ -39,3 +39,21 @@
  kokyan_united_naval_command_desc: "Compared to our western brothers, the defense navy was established as a single entity under a designated Domei Shusho, responsible for keeping order in the ranks and organizing impressment."
  kokyan_okukaigan_unification: "Okukaigan Unification"
  kokyan_okukaigan_unification_desc: "What was once just a wild dream, now is a plausible reality. Many wish to finally end the split between the three republics and finally stand together in the increasingly centralized world."
+
+ shirosho_ideas: "Shiroshan Ideas"
+ shirosho_ideas_bonus: "Shiroshan Ambition"
+ shirosho_ideas_start: "Shiroshan Traditions"
+ shirosho_tengkyuro_archipelago: "People of Tengkyuro"
+ shirosho_tengkyuro_archipelago_desc: "REPLACE_ME"
+ shirosho_yabuha_colonization: "Yabuha Colonization"
+ shirosho_yabuha_colonization_desc: "REPLACE_ME"
+ shirosho_seinaru_nagare: "Seinaru Nagare"
+ shirosho_seinaru_nagare_desc: "REPLACE_ME"
+ shirosho_kokunai_kyogi: "Kokunai Kyogi"
+ shirosho_kokunai_kyogi_desc: "REPLACE_ME"
+ shirosho_book_of_heavenly_laws: "Book of Heavenly Laws"
+ shirosho_book_of_heavenly_laws_desc: "REPLACE_ME"
+ shirosho_saikaiko_pearls: "Saikaiko Pearls"
+ shirosho_saikaiko_pearls_desc: "REPLACE_ME"
+ shirosho_akaki_colony: "Akaki Kingdom"
+ shirosho_akaki_colony_desc: "REPLACE_ME"
