--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -52,6 +52,9 @@
  ngamba_estuary_modifier: "Ngamba Estuary"
  atayala_estuary_modifier: "Atayala Estuary"
  oyar_estuary_modifier: "Oyar Estuary"
+ leuve_estuary_modifier: "Leuve Estuary"
+ kerdex_estuary_modifier: "Kerdex Estuary"
+ jundia_estuary_modifier: "Jundia Estuary"
  
 
  uzkolian_toll: "Uzkolian Toll"
