--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -1145,3 +1145,88 @@
  dittelim_area: "Dittelim"
  jiniciir_area: "Jiniciir"
  fuva_area: "Fuva"
+
+ east_koro_coast_area: "East Koro Coast"
+ niakita_area: "Niakita"
+ west_koro_coast_area: "West Koro Coast"
+ aziki_area: "Aziki"
+ lower_ngamba_area: "Lower Ngamba"
+ kwalu_area: "Kwalu"
+ esala_area: "Esala"
+ nsabaki_area: "Nsabaki"
+ kafa_area: "Kafa"
+ songala_area: "Songala"
+ kugiza_area: "Kugiza"
+ giki_area: "Giki"
+ ntabi_area: "Ntabi"
+ singayo_area: "Singayo"
+ mweba_area: "Mweba"
+ ezunki_area: "Ezunki"
+ simka_area: "Simka"
+ kubi_area: "Kubi"
+ kuranga_area: "Kurana"
+ igaji_area: "Igaji"
+ ishubi_area: "Ishubi"
+ sangachik_area: "Sangachik"
+ kucya_area: "Kucya"
+ vhazinda_area: "Vhazinda"
+ nyere_area: "Nyere"
+ mdemhara_area: "Mdemhara"
+ ndaramga_area: "Ndaramga"
+ rufadi_area: "Rufadi"
+ north_amhebia_area: "North Amhebia"
+ nyamasiga_area: "Nyamasiga"
+ oabui_area: "Oabui"
+ south_amhebia_area: "South Amhebia"
+ ubigan_bay_area: "Ubigan Bay"
+ umama_area: "Umama"
+ mahlofane_area: "Mahlofane"
+ indaga_area: "Indaga"
+ gqaba_area: "Gqaba"
+ khana_area: "Khana"
+ donqabwa_area: "Donqabwa"
+ ngirila_area: "Ngirila"
+ lusanga_area: "Lusanga"
+ hapamu_area: "Hapamu"
+ nsite_area: "Nsite"
+
+ northern_tabaya_area: "Northern Tabaya"
+ lower_jundia_area: "Lower Jundia"
+ maravia_area: "Maravia"
+ southern_tabaya_area: "Southern Tabaya"
+ masana_area: "Masana"
+ guacara_area: "Guacara"
+ sapi_area: "Sapi"
+ janipa_area: "Janipa"
+ azuria_area: "Azuria"
+ quehe_area: "Quehe"
+ maraenia_area: "Maraenia"
+ yaika_area: "Yaika"
+ solopretia_area: "Solopretia"
+ costa_alta_area: "Costa Alta"
+ camiara_area: "Camiara"
+ qenqenenoo_area: "Qenqenenoo"
+ finda_area: "Finda"
+ lema_area: "Lema"
+ kalke_area: "Kalke"
+ laagato_area: "Laagato"
+ tertesh_area: "Tertesh"
+ pakla_area: "Pakla"
+ orcqogen_area: "Orcqogen"
+ xiyimatek_area: "Xiyimatek"
+ west_ntaka_area: "West Ntaka"
+ east_ntaka_area: "East Ntaka"
+ njiiti_area: "Njiiti"
+ tichi_area: "Tichi"
+ tirche_area: "Tirche"
+ costa_de_sal_area: "Costa de Sal"
+ kiteha_area: "Kiteha"
+ mapua_area: "Mapua"
+ costania_area: "Costania"
+ koolke_area: "Koolke"
+ la_gerda_area: "La Gerda"
+ sumaar_area: "Sumaar"
+ gantonia_area: "Gantonia"
+ leuvera_area: "Leuvera"
+ malke_area: "Malke"
+ mawonia_area: "Mawonia"
