cach moi patron spirits

--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -83,6 +83,25 @@
  patron_daimin_spirit_desc: "On the peaceful island of Daimin, the blossoming plum tree is the symbol of Lady Hoi-Fan, the spirit of the island who blessed the newcomers who settled the island. Offerings to her are often in the form of tea leaves and fresh blossoming branches for her to bless the harvests."
 
 
+ dummy_patron_1: "Hello"
+ dummy_patron_2: "Hello"
+ dummy_patron_3: "Hello"
+ dummy_patron_4: "Hello"
+ dummy_patron_5: "Hello"
+ dummy_patron_6: "Hello"
+ dummy_patron_7: "Hello"
+ dummy_patron_8: "Hello"
+ patron_ba_bien: "Ba Bien" #Lady of the Sea
+ patron_ba_bien_desc: "Ruler of all fresh water, her pristine aura bless the land with abundance soil."
+ patron_ken_chua: "Ken Chua" #Horned Lord
+ patron_ken_chua_desc: "Be Bien's husband, who taught humans animal husbandry."
+ patron_con_xo_quan: "Con Xo Quan" #Wind Warden
+ patron_con_xo_quan_desc: "Beastial Commander of Storm and Typhoon, domineering yet gentle."
+ patron_guom_su_dung: "Guom Su Dung" #Blade wielder
+ patron_guom_su_dung_desc: "Daughter of warrior slain by Dragon of The East, destroyer of Bac Wong. Her blade-like tounge sweeten her way into power and her blade removed those who were firm in their belief."
+ patron_cay_tinh_con: "Cay Tinh Con" #Son of the shrines
+ patron_cay_tinh_con_desc: "Monk who has travelled to every corner of the world and attained immortality and now with eternity to spend, he roam across Voitak seeking believer with inqueries for him"
+
  CITY: "City"
  KIT_TSAN: "Kit-Ts'an"
  HIGH_REPUBLIC: "High Republic"
