--- a/localisation/TD_01_flavour_voitak_l_english.yml
+++ b/localisation/TD_01_flavour_voitak_l_english.yml
@@ -7,7 +7,7 @@
  nai_terraced_farming: "Terraced Farming"
  nai_terraced_farming_desc: "The hilly landscape is not optimal for agriculture due to the frequent rains washes away any planted crops. To solve this problem, our farmers began constructing terraces, which hold water and prevents the destruction of the fields."
  nai_legend_of_man_wei: "The Legend of Man Wei"
- nai_legend_of_man_wei_desc: "Man Wei, known also as 'The Dragon of the east', is a mythical adventurer who supposedly was the first Hengtuan to reach these lands and unite the various clans under one banner, founding the first Voitakian kingdom. Stories of his travel are kept through oral tradition, of which the most famous is him managing to trick the elephant princess to gain immense wealth."
+ nai_legend_of_man_wei_desc: "Man Wei, known also as 'The Dragon of the East', is a mythical adventurer who supposedly was the first Hengtuan to reach these lands and unite the various clans under one banner, founding the first Voitakian kingdom. Stories of his travel are kept through oral tradition, of which the most famous is him managing to trick the elephant princess to gain immense wealth."
  nai_nragan_tributes: "Nragan Tributes"
  nai_nragan_tributes_desc: "Scattered Nragan tribes are not much on their own, however many of them produce valuable goods, worth much more in our homeland than in Dinh-Tong. Through the show of strength we can exploit these peoples and thanks to their relative diplomatic isolation we can ensure they will never rebel."
  nai_highland_cities: "Highland Cities"
