--- a/localisation/core_l_english.yml
+++ b/localisation/core_l_english.yml
@@ -149,7 +149,7 @@
  PIETY_DESCRIPTION_ESTATES: "\nThe type of allegiance of your ruler will influence the loyalty of your Estates."
  KARMA_DESC2: "Ruler Fervor represents your monarchs stance against devils and evil in the world. If the ruler is too focused on fighting evil spirits he might succumb into becoming one himself, but if they decide to disregard this fight he might even be seen as supporter of evil. The trick lies in the balance between active and passive fight and to not disregard lives of the nations' population."
  KARMA_DESC: "Ruler becomes a pacifist from:\n- §YHonoring alliances§!\n- §YReleasing vassals§!\n- §YReleasing nations in peace deals§!\n- §YReturning cores§!\n- §YConverting Provinces§!\n\nRuler becomes a warlord from:\n- §YStarting wars§!\n- §YTaking provinces in peace deals§!"
- PATRIARCH_DESCRIPTION: "Zheng means different things to various schools of thought, but it is generally seen as righteousness of the ruler and their legitimacy. While High Zheng might legitimize our rule in the provinces, low Zheng can cause widespread unrest and even detronization."
+ PATRIARCH_DESCRIPTION: "Zheng means different things to various schools of thought, but it is generally seen as righteousness of the ruler and their legitimacy. While high Zheng might legitimize our rule in the provinces, low Zheng can cause widespread unrest and even detronization."
  EFFECTIVE_INCOME_EXPL: "This will increase the monthly income from this province by §Y$VAL$§!¤"
  EFFECTIVE_INCOME_EXPL_YEARLY: "This will increase the yearly income from this province by §Y$VAL$§!¤"
  EFFECTIVE_MANPOWER_EXPL: "This will increase the manpower from this province by §Y$VAL$§!."
