loc fixes and fixes

--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -142,28 +142,28 @@
  castelo_ferran_desc: "In order to protect the trade routes coming from the inland of the Narbona and protect the city of Paraconna from heathens, a castle was build near the river, taking the name of one of the relatives of the local duke."
  
  vanapiir_iron_mine: "Vanapiir Iron Mine"
- vanapiir_iron_mine_desc: "Biggest Iron Mine in Kakigia, most of Kakigian weapons are made with iron from this mining complex."
+ vanapiir_iron_mine_desc: "Biggest Iron Mine in Kakigia - most weapons in Pohjoismaa and Daslevania are produced using ore mined there."
  
  zlatodvor_cloth_hall: "Zlatodvor Cloth Hall"
- zlatodvor_cloth_hall_desc: "Zlatodvor Cloth Hall is trading hub where the famous Zlatodvor's Golden Cloth is sold, and is the only place where this cloth can be bought."
+ zlatodvor_cloth_hall_desc: "These famed halls is the only trading hub where the famous Golden Cloth is sold and bought by wealthy merchants and nobles."
  
- stegorod_stables: "Grand Stegorod Stables"
- stegorod_stables_desc: "With ever Expanding Velypsheni need for horses, and expansion of Stegorod, it was designated to build the grandest stables in all of Kakigia in Stegorod."
+ stegorod_stables: "Grand Stables of Stegorod"
+ stegorod_stables_desc: "To accomodate the Velypsheni need for a secure place to station the cavalry, Stegorod was chosen as the new hub due to its secure position."
  
  akhalivan_palace: "Akhalivan Palace"
  akhalivan_palace_desc: "Akhalivan Palace is an old imperial complex build in times of last Zakarturi Empire."
  
  bhamata_great_forts: "Bhamata Great Forts"
- bhamata_great_forts_desc: "Biggest fortification complex build by Apastri, known for centuries for being impossible to conquer."
+ bhamata_great_forts_desc: "Biggest fortification complex build by Apastri, never being taken in a siege in centuries of its existence, always being expanded with new innovations."
  
  great_bokglon_canals: "Great Bokglon Canals"
  great_bokglon_canals_desc: "A Series of canals on Bokglon estuary, made by local queendom to utilize the fertile soil more efficiently."
  
  holy_temple_of_gsambya: "Holy Temple of Gsambya"
- holy_temple_of_gsambya_desc: "The residence of Sarvoccapakapujari, and the holiest place for anyone in the Desjaniti faith, many faithful pilgrimage to this temple every year."
+ holy_temple_of_gsambya_desc: "The residence of Sarvoccapakapujari and the central temple of the Desjanitis, where many faithful pilgrimage to every year."
  
  perimutaman: "Perimutaman"
- perimutaman_desc: "Perimutaman is an old palace build by the local nobility when they still were present in Perimutam, now repurposed for public use of the people by the Priesthood."
+ perimutaman_desc: "An ancient palace build by the local nobility, now repurposed by the commoners for public use."
  
  parhali_fortress: "Parhali Fortress"
- parhali_fortress_desc: "Infamous pirate fortress, being built by Apastri that went south to become a pirate, known in the region for the fact that it has never fallen into enemy's hands."
+ parhali_fortress_desc: "Infamous pirate fortress, built by a legendary Apastri sailor and later pirate. The stronghold is known in the region for never falling into enemy's hands."
