--- a/localisation/TD_01_flavour_daslevania_l_english.yml
+++ b/localisation/TD_01_flavour_daslevania_l_english.yml
@@ -17,7 +17,6 @@
  velypshen_absolutist_state: "Absolutist State"
  velypshen_absolutist_state_desc: "Velypshen had always big bureaucracy inherited after the Zakarturians, and to bring the estates into the fold, they have taken lessons from the Bogiler and introduced absolutist reforms in their state."
  
- 
  kurtian_ideas: "Kurtian Ideas"
  kurtian_ideas_start: "Kurtian Traditions"
  kurtian_ideas_bonus: "Kurtian Ambition"
@@ -73,7 +72,7 @@
  daslevanian_peasant_liberty_desc: "With amount of peasants flowing into our country, and how easy was for them to join the Konmarister ranks, we couldn't keep them tied to land even by force. We had to abolish feudal standards and grant notable liberties to the peasantry to avoid the Brianoli scenario."
  
  daslevanian_empire_reform: "Daslevanian Empire"
- daslevanian_empire_reform_desc: "I like gov cap (REPLACE_ME)"
+ daslevanian_empire_reform_desc: "Daslevanian Empire was a political entity with expanded, reformed administration based on Eneratian Kurtian advancements and Velypsheni military innovations brought from the steppe-living Konmaristers."
  
  daslevania.1.t: "Morvanian End of Tributaries"
  daslevania.1.desc: "With Charadeidian Horde occupied with their disloyal subjects, it is our time to strike and aim for independence from paying the tribute to the Charadeidian Reis, and secure future of our glorious duchy!"
