--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -249,6 +249,9 @@
  devatarastra_reform: "Devatarastra"
  devatarastra_reform_desc: "We have united most of Maisetra under Deva's rule, it is time for us to do gods' work, and start educating the masses."
  
+ terivi_nallennam_reform: "Terivi Nallennam"
+ terivi_nallennam_reform_desc: "Terivi Nallennam is a type of theocratical government native only to the Itapikkai clergy of Panitakuru which completely abolishes the noble estate, and replaces it with focus on peasant liberty and equality."
+ 
  apagtaru_aranya_march_reform: "Aranya March"
  apagtaru_aranya_march_reform_desc: "Aranya March is a special Apagtaru March established by Aranya dynasty, and it's mission is to colonize the eastern forests."
  mechanic_can_siberian_colonize_in_pasmangala_yes: "Can Establish Colonial Frontiers Only in Pasmangala Region."
