The Hidden Funny Part 1

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -284,6 +284,8 @@
  FLD_ADJ: "Felder"
  SNA: "Snaiwatz"
  SNA_ADJ: "Snaiwatzer"
+ AUS: "Oustria"
+ AUS_ADJ: "Oustrian"
 
  BOH: "Bohemia"
  BOH_ADJ: "Bohemian"
