--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -801,7 +801,7 @@
  azumaga_area: "Azumaga"
  kyonoshima_area: "Kyonoshima"
  kitasari_area: "Kitasari"
- tengkyuro_area: "Tengkyuro"
+ tengukyuro_area: "Tengukyuro"
  sakaiko_area: "Sakaiko"
  north_yabuhan_islands_area: "North Yabuha Islands"
  south_yabuhan_islands_area: "South Yabuha Islands"
