--- a/localisation/powers_and_ideas_l_english.yml
+++ b/localisation/powers_and_ideas_l_english.yml
@@ -728,20 +728,20 @@
  foreign_section_desc: "The Foreign Section (Cudzodziemski Autorament) were units trained in the German manner and initially had German officers. They provided the spine of the new Polish army, improving the performance."
  focus_on_field_defences: "Focus on Field Defenses"
  focus_on_field_defences_desc: "There is nothing quite like seeing your comrades die in terrible agony to make you wonder if staying on the battlefield is really such a good idea. Using field fortifications can give the illusion of protection and give our troops more heart."
- HAB_ideas: "Austrian Ideas"
- HAB_ideas_start: "Austrian Traditions"
- HAB_ideas_bonus: "Austrian Ambition"
+ HAB_ideas: "Oustrian Ideas"
+ HAB_ideas_start: "Oustrian Traditions"
+ HAB_ideas_bonus: "Oustrian Ambition"
  imperial_ambitions: "Imperial Ambition"
- imperial_ambitions_desc: "The fall of the House of Hohenstauffen in 1250 led to chaos in the Empire and the Golden Bull of 1356 legalized anarchy by calling a constitution. However, in 1438 the Imperial title was regained by the most noble house of Habsburg from its power base in Austria. Austria must hold onto this title and seek to reform the Empire to make it Holy, Roman and an Empire once more."
+ imperial_ambitions_desc: "The fall of the House of Hohenstauffen in 1250 led to chaos in the Empire and the Golden Bull of 1356 legalized anarchy by calling a constitution. However, in 1438 the Imperial title was regained by the most noble house of Habsburg from its power base in Oustria. Oustria must hold onto this title and seek to reform the Empire to make it Holy, Roman and an Empire once more."
  military_border: "Military Frontier"
  military_border_desc: "The defense of our frontiers is a serious issue, not so much how to do it but how to pay for it. The solution we have hit upon it to make generous land grants on the frontier to build up a professional military class. Not only will this ensure our frontier is adequately defended at a reasonable price, but these men will be available for other tasks too."
  fugger_banks: "Fugger Banking"
  fugger_banks_desc: "The Fuggers are a merchant family from Swabia, who originally made money from weaving and shrewdly invested the profits into land. Building up their power they are now one of the wealthiest houses in the Empire. We must gain exclusive access to their services as bankers."
  habsburg_dominance: "Habsburg Dominance"
- habsburg_dominance_desc: "Bella gerant alii, tu felix Austria, nube!"
+ habsburg_dominance_desc: "Bella gerant alii, tu felix Oustria, nube!"
  edict_of_restitution: "Edict of Restitution"
  edict_of_restitution_desc: "Our confessor William Lamormaini has recommended a small piece of book keeping that will tidy up the religious affairs of our realm. There is no harm in it so we might as well pass this small edict."
- austrian_court: "Austrian Court"
+ austrian_court: "Oustrian Court"
  austrian_court_desc: "There is nothing in theory stopping us from having more diplomatic relations, however, maintaining them requires time and effort. By streamlining our court, we can ensure that we get the information we need to smooth ruffled feathers when they occur."
  hofkriegsrat: "Hofkriegsrat"
  hofkriegsrat_desc: "Essentially the ministry for war. It is the full-time bureaucracy administering our army. One of its most important jobs is to know where our armies are. That way armies can receive the things they need, in particular men."
