--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -159,7 +159,7 @@
  great_bokglon_canals: "Great Bokglon Canals"
  great_bokglon_canals_desc: "A Series of canals on Bokglon estuary, made by local queendom to utilize the fertile soil more efficiently."
  
- holy_temple_of_gsambya: "Holy Temple of Gsambya"
+ holy_temple_of_gsambya: "Gsambya's Bhamatha"
  holy_temple_of_gsambya_desc: "The residence of Sarvoccapakapujari and the central temple of the Desjanitis, where many faithful pilgrimage to every year."
  
  perimutaman: "Perimutaman"
