--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -441,6 +441,7 @@
  pullara: "Pullara"
 
  desjaniti: "Desjaniti"
+ desjaniti_religion_desc: "Desjaniti is a faith focused on achieving Godhood through wisdom and education. It is reliant on seven Bhamathas, with the most important one being that in Gsambya, where Sarvoccapakapujari, the head of Desjaniti faith and Bhahana state, resides."
  desjaniti_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  desjaniti_rebels_title: "Religious"
  desjaniti_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
