--- a/localisation/leviathan_l_english.yml
+++ b/localisation/leviathan_l_english.yml
@@ -1396,7 +1396,7 @@
  native_federations_event.4.b: "Leader Gets the Best Part."
  primus_inter_pares_mod: "Primus Inter Pares"
  desc_primus_inter_pares_mod: "As we are the leaders of the Federation, we are the ones getting the biggest benefits. It is only fair."
- guru_teaching: "Guru Teachings"
+ guru_teaching: "Deva Teachings"
  native_federations_event.5.t: "Problems for the Federation"
  native_federations_event.5.d: "The leader of our Federation has been exhibiting an odd behavior lately and some concerning gossip have spread across the tribes. While nobody has raised their voices, the leaders of the other members of the Federation are worried and have gathered together to discuss the issue."
  native_federations_event.5.a: "This is a problem."
