--- a/localisation/tmm_l_english.yml
+++ b/localisation/tmm_l_english.yml
@@ -986,10 +986,10 @@
  ANCESTOR_LEVEL_BONUS: "Ancestor $NAME$ level bonus"
  FEDERATION_DESIRABILITY_DONT_WANT_TO_CHANGE: "All that paperwork of changing Federation: "
  NO_TRADE_COMPANIES: "No Trade Companies"
- CURRENT_GURU: "Current Guru"
- NEXT_GURU: "Next Guru"
+ CURRENT_GURU: "Current Deva"
+ NEXT_GURU: "Next Deva"
  CURRENT_GURU_DESC: "Your country currently gets the following benefits from $NAME$:\n\n$EFFECTS$"
- NEXT_GURU_DESC: "When the current Guru retires, $NAME$ will step up to replace him. When he becomes Guru, your country will get the following benefits:\n\n$EFFECTS$"
+ NEXT_GURU_DESC: "When the current Deva retires, $NAME$ will step up to replace him. When he becomes Deva, your country will get the following benefits:\n\n$EFFECTS$"
  PICK_TEACHING_DESC: "Add a teaching to permanently affect your country at a cost of some Monarch points."
  IF_CONDITIONS_MET: "If the following conditions are met:"
  THEN_THIS: "...then these effects will happen:"
@@ -1012,23 +1012,23 @@
  HAVE_CONDOTTIERI_WITH: "You cannot make an Alliance with a nation that you have Condottieri fighting."
  CANNOT_BUILD_SUPPLY_DEPOT_AT_SEA: "It would be crazy to drop a supply depot in the sea."
  CANNOT_AFFORD_GURU_COST: "You cannot afford the $POW|Y$ $TYPE$ power needed for this Teaching."
- CANNOT_PICK_TEACHING_NEW_GURU: "You cannot select more than one teaching from each Guru."
- GURU_APPOINTED: "$GURU|Y$ is made Guru."
- NEW_GURU_SETUP: "When a new Guru is appointed."
+ CANNOT_PICK_TEACHING_NEW_GURU: "You cannot select more than one teaching from each Deva."
+ GURU_APPOINTED: "$GURU|Y$ is made Deva."
+ NEW_GURU_SETUP: "When a new Deva is appointed."
  NEW_GURU_HEADER: "$MESSENGER$"
- NEW_GURU_1: "New Guru"
- NEW_GURU_2: "$GURU|Y$ has been appointed the new Guru."
+ NEW_GURU_1: "New Deva"
+ NEW_GURU_2: "$GURU|Y$ has been appointed the new Deva."
  NEW_GURU_3: "They bring the following effects:"
  NEW_GURU_4: "$EFFECTS$."
- NEW_GURU_LOG: "New Guru appointed."
+ NEW_GURU_LOG: "New Deva appointed."
  NEW_GURU_BTN1: "OK"
  NEW_GURU_BTN2: ""
  NEW_GURU_BTN3: ""
- NO_GURU_SETUP: "When no Guru is available."
+ NO_GURU_SETUP: "When no Deva is available."
  NO_GURU_HEADER: "$MESSENGER$"
- NO_GURU_1: "No Guru"
- NO_GURU_2: "Our Religion is lacking a Guru."
- NO_GURU_LOG: "No Guru appointed."
+ NO_GURU_1: "No Deva"
+ NO_GURU_2: "Our Religion is lacking a Deva."
+ NO_GURU_LOG: "No Deva appointed."
  NO_GURU_BTN1: "OK"
  NO_GURU_BTN2: "" #
  NO_GURU_BTN3: ""
