Desjaniti events and tweaks

--- a/localisation/TD_01_flavour_desjaniti_l_english.yml
+++ b/localisation/TD_01_flavour_desjaniti_l_english.yml
@@ -97,10 +97,52 @@
  BHA_Appoint_next_deva_tt: "§YNext Deva is appointed.§!"
  BHA_Chilverchian_influences_tt: "§RAs long as this Deva is active, our provinces have chance to become revolutionary (When Revolutions Rework happens, that is, remove this line when it happens pls).§!\n"
  
- BHA_living_god: "§BLiving God§!"
+ BHA_living_god: "§OLiving God§!"
  BHA_living_god_desc: "Ruler with this personality is seen by his fellow faith followers as a living god."
  
  desjaniti_home_of_deva: "Home of Deva"
  desjaniti_home_of_deva_desc: "This province is a place where person who ascended to Desjaniti Godhood was born, and is considered sacred by Desjaniti faith."
  desjaniti_home_of_last_deva: "Home of Last Deva"
  desjaniti_home_of_last_deva_desc: "This province is a place where last person who ascended to Desjaniti Godhood was born, and is considered the most sacred by Desjaniti faith."
+ 
+ 
+ desjaniti.101.t: "Pakapujari conflict with Nobility"
+ desjaniti.101.desc: "REPLACE_ME"
+ desjaniti.101.a: "Support Pakapujari"
+ desjaniti.101.b: "Support Nobility"
+ TD_Desjaniti_supported_pakapujari: "Supported Pakapujari in conflict with Nobility"
+ desjaniti.102.t: "Peasantry and matter of Teachings"
+ desjaniti.102.desc: "REPLACE_ME"
+ desjaniti.102.a: "Support Nobility"
+ desjaniti.102.b: "Support PeasantsName"
+ desjaniti.103.t: "Pakapujari conflict with Sarvoccapakapujari"
+ desjaniti.103.desc: "REPLACE_ME"
+ desjaniti.103.a: "Support Pakapujari"
+ desjaniti_opposed_pakapujarirajya: "Opposed Sarvoccapakapujari"
+ desjaniti.103.b: "Support Sarvoccapakapujari"
+ desjaniti.104.t: "Faithful Makes a donation"
+ desjaniti.104.desc: "REPLACE_ME"
+ desjaniti.104.a: "Accept it"
+ desjaniti.104.b: "Donate it to the poor"
+ desjaniti.105.t: "Pakapujari questions legitimacy of our ruler"
+ desjaniti.105.desc: "REPLACE_ME"
+ desjaniti.105.a: "Embrace the reputation!"
+ desjaniti.105.b: "It is what it is.."
+ desjaniti.106.t: "Spread of Forgein Ideals"
+ desjaniti.106.desc: "REPLACE_ME when 1.1 hits."
+ desjaniti.106.a: "It will blow over.."
+ 
+ grand_desjaniti_temple: "Bhamatha"
+ grand_desjaniti_temple_desc: "Bhamatha is one of seven grand Desjaniti temples that are holy sites native to this faith."
+ 
+ desjaniti.201.t: "The Decay of Bhamatha"
+ desjaniti.201.desc: "REPLACE_ME"
+ desjaniti.201.a: "Repair it"
+ desjaniti.201.b: "Leave it be"
+ TD_Desjaniti_decaying_temple: "Decaying Bhamatha"
+ desjaniti.202.t: "Conflict at Bhamatha"
+ desjaniti.202.desc: "REPLACE_ME"
+ desjaniti.202.a: "Support Radicals"
+ desjaniti.202.b: "Support Traditionalists"
+ desjaniti.202.c: "Support neither side"
+ 
