Guess who forgot on actions (fix)

--- a/localisation/TD_01_flavour_desjaniti_l_english.yml
+++ b/localisation/TD_01_flavour_desjaniti_l_english.yml
@@ -114,7 +114,7 @@
  desjaniti.102.t: "Peasantry and matter of Teachings"
  desjaniti.102.desc: "REPLACE_ME"
  desjaniti.102.a: "Support Nobility"
- desjaniti.102.b: "Support PeasantsName"
+ desjaniti.102.b: "Support Peasants"
  desjaniti.103.t: "Pakapujari conflict with Sarvoccapakapujari"
  desjaniti.103.desc: "REPLACE_ME"
  desjaniti.103.a: "Support Pakapujari"
