--- a/localisation/TD_01_flavour_desjaniti_l_english.yml
+++ b/localisation/TD_01_flavour_desjaniti_l_english.yml
@@ -97,7 +97,7 @@
  BHA_Appoint_next_deva_tt: "§YNext Deva is appointed.§!"
  BHA_Chilverchian_influences_tt: "§RAs long as this Deva is active, our provinces have chance to become revolutionary (When Revolutions Rework happens, that is, remove this line when it happens pls).§!\n"
  
- BHA_living_god: "§OLiving God§!"
+ BHA_living_god: "Living God"
  BHA_living_god_desc: "Ruler with this personality is seen by his fellow faith followers as a living god."
  
  desjaniti_home_of_deva: "Home of Deva"
