Pakapujarirajya desjaniti buttons WIP

--- a/localisation/TD_01_flavour_desjaniti_l_english.yml
+++ b/localisation/TD_01_flavour_desjaniti_l_english.yml
@@ -146,3 +146,24 @@
  desjaniti.202.b: "Support Traditionalists"
  desjaniti.202.c: "Support neither side"
  
+ pakapujarirajya_proclaim_years_of_festivals_tt: "Proclaim Years of Festivals"
+ pakapujarirajya_ban_burghers_tt: "Endore Anti-Burghers Movements"
+ pakapujarirajya_proclaim_saint_year_tt: "Proclaim Saint Year"
+ pakapujarirajya_outlaw_forgein_teachings_tt: "Outlaw Forgein Teachings"
+ pakapujarirajya_demand_addnotional_tax_tt: "Demand Addnotional Tax for Education"
+ pakapujarirajya_release_new_teachings_tt: "Release new Teachings"
+ TD_pakapujarirajya_doesnt_have_cooldown_tt: "Does not have a 10 year cooldown for using Pakapujarirajya's Abilities."
+ TD_pakapujarirajya_cooldown_mod: "Pakapujarirajya Ability Cooldown"
+ TD_Desjaniti_cant_build_mod: "Year of Repose"
+ TD_Desjaniti_years_of_festivals: "Years of Festivals"
+ desjaniti.300.t: "Years of Festivals Proclaimed"
+ desjaniti.300.desc: "REPLACE_ME"
+ desjaniti.300.a: "Well, we can't oppose the Pakapujarirajya"
+ desjaniti_proclaimed_years_of_festivals: "Proclaimed Years of Festivals"
+ BHA_proclaim_years_of_festivals_effect_tt: "§YEvery Desjaniti country will lose 10 relations with us and get following modifiers:\n§!"
+ TD_anti_burghers_movements: "Anti Burghers Movements"
+ desjaniti_endorsed_anti_burghers_movements: "Endorsed anti-Burghers Movements"
+ BHA_ban_burgers_effect_tt: "§YEvery Desjaniti country will lose 25 relations with us and get following modifiers and effects:\n§!"
+ desjaniti.301.t: "Endorsement of Anti-Burghers Movements"
+ desjaniti.301.desc: "REPLACE_ME"
+ desjaniti.301.a: "Well, we can't oppose the Pakapujarirajya"
