Pakapujarirajya buttons with AI

--- a/localisation/TD_01_flavour_desjaniti_l_english.yml
+++ b/localisation/TD_01_flavour_desjaniti_l_english.yml
@@ -167,3 +167,32 @@
  desjaniti.301.t: "Endorsement of Anti-Burghers Movements"
  desjaniti.301.desc: "REPLACE_ME"
  desjaniti.301.a: "Well, we can't oppose the Pakapujarirajya"
+ BHA_proclaim_saint_year_effect_tt: "§YEvery Desjaniti country will lose 25 relations with us and get following modifiers and effects:\n§!"
+ desjaniti_proclaimed_saint_year: "Proclaimed Saint Year"
+ desjaniti.302.t: "Saint Year Proclaimed"
+ desjaniti.302.desc: "REPLACE_ME"
+ desjaniti.302.a: "Well, we can't oppose the Pakapujarirajya"
+ desjaniti.303.t: "Unjust war with Pakapujarirajya"
+ desjaniti.303.desc: "REPLACE_ME"
+ desjaniti.303.a: "There shall be peace"
+ desjaniti.303.b: "But it is our destiny to conquer Bhahana!"
+ TD_saint_year: "Saint Year"
+ BHA_whitepeace_aggressors_tt: "§REvery Desjaniti country that has offensive war with us will be forced to whitepeace us or suffer dire consequences.§!"
+ desjaniti_outlawed_forgein_teachings: "Outlawed Forgein Teachings"
+ TD_forgein_teachings_outlawed: "Forgein Teachings Outlawed"
+ desjaniti.304.t: "Forgein Teachings Outlawed"
+ desjaniti.304.desc: "REPLACE_ME"
+ desjaniti.304.a: "Well, we can't oppose the Pakapujarirajya"
+ BHA_outlaw_forgein_teachings_effect_tt: "§YEvery Desjaniti country will lose 25 relations with us and get following modifiers:\n§!"
+ TD_desjaniti_addnotional_education_funding: "Addnotional Education Funding"
+ desjaniti_demanded_addnotional_tax_for_education: "Demanded Addnotional Tax for Education"
+ desjaniti.305.t: "Addnotional tax for Education Demanded"
+ desjaniti.305.desc: "REPLACE_ME"
+ desjaniti.305.a: "Well, we can't oppose the Pakapujarirajya"
+ BHA_demand_addnotional_tax_effect_tt: "§YEvery Desjaniti country will lose 25 relations with us and get following modifiers and effects:\n§!"
+ desjaniti_released_new_teachings: "Released new Teachings"
+ TD_desjaniti_released_new_teachings: "Released new Teachings"
+ BHA_release_new_teachings_effect_tt: "§YEvery Desjaniti country will gain 25 relations with us and we will get following modifiers:\n§!"
+ desjaniti.306.t: "New Teachings Released"
+ desjaniti.306.desc: "REPLACE_ME"
+ desjaniti.306.a: "Glory to the Pakapujarirajya"
