--- a/localisation/TD_01_flavour_daslevania_l_english.yml
+++ b/localisation/TD_01_flavour_daslevania_l_english.yml
@@ -65,7 +65,7 @@
  daslevanian_abolished_zakarturian_bureaucracy: "Abolished Zakarturian Bureaucracy"
  daslevanian_abolished_zakarturian_bureaucracy_desc: "Daslevania lies on the ruins of Zakarturii Empire, and beacuse of that, inherited a lot of its bureaucracy, but most of it is redundant and bloated, making in disfunctional, we should reform into new bureaucracy systems that isn't based on Zakarturian Legacy."
  daslevanian_prosperity_of_the_wheatfields: "Prosperity of the Wheatfields"
- daslevanian_prosperity_of_the_wheatfields_desc: "Our wheatfields are extensive, and we have such abundance of wheat, rye, and other grains that we not only can't eat all of it, but we can barely sell the addnotional amount before it rots. We could never suffer devastation caused by hunger in our lands."
+ daslevanian_prosperity_of_the_wheatfields_desc: "Our wheatfields are extensive, and we have such abundance of wheat, rye, and other grains that we not only can't eat all of it, but we can barely sell the additional amount before it rots. We could never suffer devastation caused by hunger in our lands."
  daslevanian_reformed_dzeshetsnik_army: "Reformed Dzeshetsnik Army"
  daslevanian_reformed_dzeshetsnik_army_desc: "Dzeshetsnik army standard was inherited from Kurtian Military, and has become rather dated in the XVIIth century, so we had to reform it into new standards, making three old Dzeshetsniks into one new - Tridzeshetsnik, which was composed of three rows each counting ten men."
  daslevanian_peasant_liberty: "Peasant Liberty"
