--- a/localisation/TD_01_flavour_desjaniti_l_english.yml
+++ b/localisation/TD_01_flavour_desjaniti_l_english.yml
@@ -147,7 +147,7 @@
  desjaniti.202.c: "Support neither side"
  
  pakapujarirajya_proclaim_years_of_festivals_tt: "Proclaim Years of Festivals"
- pakapujarirajya_ban_burghers_tt: "Endore Anti-Burghers Movements"
+ pakapujarirajya_ban_burghers_tt: "Endorse Anti-Burghers Movements"
  pakapujarirajya_proclaim_saint_year_tt: "Proclaim Saint Year"
  pakapujarirajya_outlaw_forgein_teachings_tt: "Outlaw Forgein Teachings"
  pakapujarirajya_demand_addnotional_tax_tt: "Demand Additional Tax for Education"
